fix: Fixed ampersand and button type

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <section class="section-item" id="education">
       <h2 class="section-title">Education</h2>
       <div class="section-content">
-        <b>Information Systems & Database Engineer, Bachelor</b><br>
+        <b>Information Systems and Databases Engineer, Bachelor</b><br>
         Brest State Technical University, Electronics and Mechanics faculty @2003
       </div>
     </section>
@@ -150,7 +150,7 @@
       <li><a class="footer-rs-logo" href="https://rs.school/js/"><img src="rs_school_js.svg" alt="rs school"></a></li>
     </ul>
   </footer>
-  <button onclick="topFunction()" id="ttt-btn" title="To the top"><img src="to_the_top.svg" alt="To the top"></button>
+  <button type="button" onclick="topFunction()" id="ttt-btn" title="To the top"><img src="to_the_top.svg" alt="To the top"></button>
   <script>
     // Get the button
     let mybutton = document.getElementById("ttt-btn");
